--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
               <p id="email_invalid_error">* Invalid email address</p>
             </li>
             <li>
-              <label for="comment">Comments: </label>
+              <label id="comment">Comments: </label>
               <textarea name="comment"></textarea>
             </li>
           </ul>
