--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <title></title>
+    <title>Welcome!</title>
   </head>
   <body>
     <div class="landing">
