Added placeholder for input tags
Line 35, 40, and 46.

--- a/contact.html
+++ b/contact.html
@@ -32,18 +32,18 @@
           <ul>
             <li>
               <label for="fullname">Fullname: </label>
-              <input type="text" name="fullname" id="fullname">
+              <input type="text" name="fullname" id="fullname" placeholder="Firstname Lastname">
               <p class="error" id="fullname_error">* Required field</p>
             </li>
             <li>
               <label for="phonenumber">Phonenumber: </label>
-              <input type="text" name="phonenumber" id="phonenumber">
+              <input type="text" name="phonenumber" id="phonenumber" placeholder="2041234567">
               <p class="error" id="phonenumber_error">* Required field</p>
               <p id="phonenumber_invalid_error">* Invalid phonenumber</p>
             </li>
             <li>
               <label for="email">Email address: </label>
-              <input type="text" name="email" id="email">
+              <input type="text" name="email" id="email" placeholder="email@domain.com">
               <p class="error" id="email_error">* Required field</p>
               <p id="email_invalid_error">* Invalid email address</p>
             </li>
